--- a/_posts/2024-04-19-third.md
+++ b/_posts/2024-04-19-third.md
@@ -3,14 +3,17 @@ layout: single
 title: "[Unity] RigidBody"
 categories: Unity
 tag: [Unity, C#]
+toc: true
 ---
 
 # [Unity] RigidBody
 
-RigidBody는 강체입니다. 쉽게 설명하면 현실에 있는 물리나 중력 효과라고 볼 수 있습니다.
+## RigidBody란.
+쉽게 설명하면 현실에 있는 물리나 중력 효과라고 볼 수 있습니다.
+
 대표적으로 RigidBody를 이용해서 부딪히면 날라가는 오브젝트로 예시를 들 수 있겠네요.
 
-RigidBody의 프로퍼티로는 
+## RigidBody의 프로퍼티
 
 | 프로퍼티 | 기능 |
 |--|--|
