--- a/_posts/2024-04-20-fourth.md
+++ b/_posts/2024-04-20-fourth.md
@@ -3,17 +3,23 @@ layout: single
 title: "[Unity] Collider"
 categories: Unity
 tag: [Unity, C#]
+toc: true
 ---
  
 # [Unity] Collider
 
+## Collider란
 Collider는 충돌을 감지 할 때에 필요합니다.
+
 3D에서는 대표적으로 `Box Collider`, `Sphere Collider`, `Capsule Collider`가 있습니다.
 2D에서는 대표적으로 `Box Collider 2D`와 `Circle Collider 2D` 가 있습니다.
 또한 `Mesh Collider`도 있습니다. 
 `Mesh Collider`는 오브젝트 메쉬형태에 맞게 Collider가 만들어집니다.
 
-Trigger은 이름에서도 알 수 있듯 충돌에 반응하는 것을 의미하는데 오브젝트들을 관통하고 `OnTriggerEnter`함수를 호출합니다.
+## Trigger
+Trigger는 이름에서도 알 수 있듯 충돌에 반응하는 것을 의미하는데 오브젝트들을 관통하고 `OnTriggerEnter`함수를 호출합니다.
+
+## 충돌 감지 함수
 
 충돌이 감지되었을 때 가장 먼저 일어나는 물리 업데이트는 `OnCollisionEnter` 함수 호출입니다. 
 접촉이 지속되는 상황에서는 `OnCollisionStay` 함수가 호출되며,  접촉이 끝나면 `OnCollisionExit` 함수가 호출됩니다. 
