--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,4 +5,4 @@ sitemap: false
 permalink: /404.html
 ---
 
-![](https://images.velog.io/images/superstardanwoo/post/7b3395f0-cd25-4d40-8dcf-71cbada53a85/404.png){:width="100" height="100"}
+![](https://images.velog.io/images/superstardanwoo/post/7b3395f0-cd25-4d40-8dcf-71cbada53a85/404.png){:width="100%" height="100%"}
