--- a/_posts/2024-04-19-third.md
+++ b/_posts/2024-04-19-third.md
@@ -4,6 +4,9 @@ title: "[Unity] RigidBody"
 categories: Unity
 tag: [Unity, C#]
 toc: true
+auto_profile: false
+sidebar:
+    nav: "docs"
 ---
 
 # [Unity] RigidBody
