--- a/_posts/2024-04-20-fourth.md
+++ b/_posts/2024-04-20-fourth.md
@@ -4,6 +4,9 @@ title: "[Unity] Collider"
 categories: Unity
 tag: [Unity, C#]
 toc: true
+auto_profile: false
+sidebar:
+    nav: "docs"
 ---
  
 # [Unity] Collider
