Author_profile false

--- a/_posts/2024-04-19-third.md
+++ b/_posts/2024-04-19-third.md
@@ -4,7 +4,7 @@ title: "[Unity] RigidBody"
 categories: Unity
 tag: [Unity, C#]
 toc: true
-auto_profile: false
+author_profile: false
 sidebar:
     nav: "docs"
 ---
