--- a/_posts/2024-04-18-second.md
+++ b/_posts/2024-04-18-second.md
@@ -5,8 +5,8 @@ categories: Unity
 tag: [Unity, C#]
 toc: true
 author_profile: false
-sidebar:
-    nav: "docs"
+# sidebar:
+#     nav: "docs"
 ---
 
 #  [Unity] 플레이어 이동
