--- a/_posts/2024-04-18-first.md
+++ b/_posts/2024-04-18-first.md
@@ -3,8 +3,8 @@ layout: single
 title: "개발 블로그"
 categories: Normal
 author_profile: false
-sidebar:
-    nav: "docs"
+# sidebar:
+#     nav: "docs"
 ---
 
 # 첫 개발 블로그 입니다.
