--- a/_posts/2024-04-20-fourth.md
+++ b/_posts/2024-04-20-fourth.md
@@ -5,8 +5,8 @@ categories: Unity
 tag: [Unity, C#]
 toc: true
 author_profile: false
-sidebar:
-    nav: "docs"
+# sidebar:
+#     nav: "docs"
 ---
  
 # [Unity] Collider
