--- a/_posts/2024-04-18-second.md
+++ b/_posts/2024-04-18-second.md
@@ -4,6 +4,7 @@ title: "[Unity] 플레이어 이동"
 categories: Unity
 tag: [Unity, C#]
 toc: true
+toc_sticky: true
 author_profile: false
 # sidebar:
 #     nav: "docs"
