--- a/_posts/2024-04-18-second.md
+++ b/_posts/2024-04-18-second.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[Unity] 플레이어 이동"
-categories: Unity
+categories: Programming
 tag: [Unity, C#]
 author_profile: false
 ---
