--- a/_posts/2024-04-19-third.md
+++ b/_posts/2024-04-19-third.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[Unity] RigidBody"
-categories: Unity
+categories: Programming
 tag: [Unity, C#]
 author_profile: false
 ---
