--- a/_posts/2024-04-21-fifth.md
+++ b/_posts/2024-04-21-fifth.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[Unity] 유니티 라이프 사이클"
-categories: Unity
+categories: Programming
 tag: [Unity, C#]
 author_profile: false
 ---
