--- a/_posts/2024-04-22-sixth.md
+++ b/_posts/2024-04-22-sixth.md
@@ -1,7 +1,7 @@
 ﻿---
 layout: single
 title: "[Unity] 유니티 스크립트 연결방법"
-categories: Unity
+categories: Programming
 tag: [Unity]
 author_profile: false
 ---
