--- a/_posts/2024-04-23-seventh.md
+++ b/_posts/2024-04-23-seventh.md
@@ -1,7 +1,7 @@
 ﻿---
 layout: single
 title: "[Unity] SpriteAtlas 최적화 기법"
-categories: Unity
+categories: Programming
 tag: [Unity, 최적화]
 author_profile: false
 ---
