--- a/_posts/2024-04-26-eighth.md
+++ b/_posts/2024-04-26-eighth.md
@@ -1,8 +1,8 @@
 ﻿---
 layout: single
-title: "[Unity] SpriteAtlas 최적화 기법"
-categories: Unity
-tag: [Unity, 최적화]
+title: "[C#] 가중치 랜덤"
+categories: Programming
+tag: [C#]
 author_profile: false
 ---
 
