--- a/_posts/2024-04-26-eighth.md
+++ b/_posts/2024-04-26-eighth.md
@@ -13,4 +13,52 @@ author_profile: false
 누적확률값을 이용한 랜덤입니다
 기존에 쓰던 랜덤 방식은 Random.Range()를 이용하여 난수를 생성하는데 해당 방식은 운이 좋지 않다면 0부터 1까지 정수 형식으로 난수를 생성하는데 100번을 실행해도 1이 나오지 않을 가능성도 존재하기 때문에 가중치 랜덤을 이용하여 무조건 나올 수 있도록 설계 할 수 있습니다.
 
+'public class WeightRandom : MonoBehaviour
+	{
+	    [SerializeField] private List<WeightData> 	weightData;
+
+	    [ContextMenu("Random")]
+	    public void GetRandomValue()
+	    {
+	        float maxWeight = 0;
+	        int count = 0;
+
+	        foreach (var item in weightData)
+	        {
+	            maxWeight += item.weightValue;
+	        }
+
+	        for (int j = 0; j < 1000; j++)
+	        {
+	            float pivot = Random.Range(0, maxWeight);
+	            float weight = 0;
+	            count++;
+	            for (int i = 0; i < weightData.Count; i++)
+	            {
+	                weight += weightData[i].weightValue;
+	                if (pivot <= weight)
+	                {
+	                    Debug.Log($"<color=red>{weightData[i].name}</color>");
+	                    break;
+	                }
+	            }
+	        }
+	    }
+	}
+	
+	[System.Serializable]
+	public class WeightData
+	{
+	    public string name;
+	    public float weightValue;
+	}'
+
+위 코드처럼 구현하면 
+
+
+![WeightRandom](https://github.com/cumic06/cumic06/assets/92432064/e55294e7-4887-4f07-afad-b83bf449593b)
+
+
+
+결과값은 이런식으로 나오게 됩니다.
 
